--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -153,7 +153,7 @@
     {
       "data": {
         "stringId": 334,
-        "text": "Every time you stake and unstake BLZD tokens, the contract will automatically harvest BLZD rewards for you!"
+        "text": "Every time you stake and unstake OLIVE tokens, the contract will automatically harvest OLIVE rewards for you!"
       }
     },
     {
@@ -219,7 +219,7 @@
     {
       "data": {
         "stringId": 358,
-        "text": "BLZD price"
+        "text": "OLIVE price"
       }
     },
     {
@@ -243,7 +243,7 @@
     {
       "data": {
         "stringId": 380,
-        "text": "1 BLZD = 1 SYRUP"
+        "text": "1 OLIVE = 1 SYRUP"
       }
     },
     {
@@ -291,7 +291,7 @@
     {
       "data": {
         "stringId": 400,
-        "text": "SYRUP holders proportionally split 25% of BLZD block emissions each day (10 BLZD per block), Rewards are distributed each block."
+        "text": "SYRUP holders proportionally split 25% of OLIVE block emissions each day (10 OLIVE per block), Rewards are distributed each block."
       }
     },
     {
@@ -351,13 +351,13 @@
     {
       "data": {
         "stringId": 424,
-        "text": "%num% BLZD"
+        "text": "%num% OLIVE"
       }
     },
     {
       "data": {
         "stringId": 426,
-        "text": "Spend BLZD to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
+        "text": "Spend OLIVE to buy tickets, contributing to the lottery pot. Ticket purchases end approx. 30 minutes before lottery. Win prizes if 2, 3, or 4 of your ticket numbers match the winning numbers and their positions! Good luck!"
       }
     },
     {
@@ -435,19 +435,19 @@
     {
       "data": {
         "stringId": 454,
-        "text": "%num% BLZD Available"
+        "text": "%num% OLIVE Available"
       }
     },
     {
       "data": {
         "stringId": 456,
-        "text": "Your amount must be a multiple of 10 BLZD"
+        "text": "Your amount must be a multiple of 10 OLIVE"
       }
     },
     {
       "data": {
         "stringId": 458,
-        "text": "1 Ticket = 10 BLZD"
+        "text": "1 Ticket = 10 OLIVE"
       }
     },
     {
@@ -495,7 +495,7 @@
     {
       "data": {
         "stringId": 478,
-        "text": "Ticket purchases are final. Your BLZD cannot be returned to you after buying tickets."
+        "text": "Ticket purchases are final. Your OLIVE cannot be returned to you after buying tickets."
       }
     },
     {
@@ -507,7 +507,7 @@
     {
       "data": {
         "stringId": 482,
-        "text": "BLZD prizes to be claimed"
+        "text": "OLIVE prizes to be claimed"
       }
     },
     {
@@ -543,13 +543,13 @@
     {
       "data": {
         "stringId": 494,
-        "text": "Approve BLZD"
+        "text": "Approve OLIVE"
       }
     },
     {
       "data": {
         "stringId": 496,
-        "text": "SYRUP holders proportionally split 40% of BLZD block emissions each day (10 BLZD per block), Rewards are distributed each block."
+        "text": "SYRUP holders proportionally split 40% of OLIVE block emissions each day (10 OLIVE per block), Rewards are distributed each block."
       }
     },
     {
@@ -567,13 +567,13 @@
     {
       "data": {
         "stringId": 504,
-        "text": "You\u2019ll pay for the new tokens using BLZD-BNB LP tokens, which means you need to stake equal amounts of BLZD and BNB in a liquidity pool to take part."
+        "text": "You\u2019ll pay for the new tokens using OLIVE-BNB LP tokens, which means you need to stake equal amounts of OLIVE and BNB in a liquidity pool to take part."
       }
     },
     {
       "data": {
         "stringId": 506,
-        "text": "Get BLZD-BNB LP >"
+        "text": "Get OLIVE-BNB LP >"
       }
     },
     {
@@ -651,19 +651,19 @@
     {
       "data": {
         "stringId": 536,
-        "text": "Total BLZD Supply"
+        "text": "Total OLIVE Supply"
       }
     },
     {
       "data": {
         "stringId": 538,
-        "text": "Total BLZD Burned"
+        "text": "Total OLIVE Burned"
       }
     },
     {
       "data": {
         "stringId": 540,
-        "text": "New BLZD\/block"
+        "text": "New OLIVE\/block"
       }
     },
     {
@@ -675,19 +675,19 @@
     {
       "data": {
         "stringId": 544,
-        "text": "BLZD to Harvest"
+        "text": "OLIVE to Harvest"
       }
     },
     {
       "data": {
         "stringId": 546,
-        "text": "BLZD in Wallet"
+        "text": "OLIVE in Wallet"
       }
     },
     {
       "data": {
         "stringId": 548,
-        "text": "Collecting BLZD"
+        "text": "Collecting OLIVE"
       }
     },
     {
@@ -699,7 +699,7 @@
     {
       "data": {
         "stringId": 552,
-        "text": "BLZD to Collect"
+        "text": "OLIVE to Collect"
       }
     },
     {
@@ -765,7 +765,7 @@
     {
       "data": {
         "stringId": 580,
-        "text": "Stake BLZD to earn new tokens."
+        "text": "Stake OLIVE to earn new tokens."
       }
     },
     {
@@ -783,7 +783,7 @@
     {
       "data": {
         "stringId": 586,
-        "text": "BLZD to burn (USD)"
+        "text": "OLIVE to burn (USD)"
       }
     },
     {
@@ -795,7 +795,7 @@
     {
       "data": {
         "stringId": 590,
-        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest BLZD rewards for you!"
+        "text": "\u2b50\ufe0f Every time you stake and unstake LP tokens, the contract will automatically harvest OLIVE rewards for you!"
       }
     },
     {
@@ -813,13 +813,13 @@
     {
       "data": {
         "stringId": 596,
-        "text": "Buy BLZD and BNB tokens"
+        "text": "Buy OLIVE and BNB tokens"
       }
     },
     {
       "data": {
         "stringId": 598,
-        "text": "Get BLZD-BNB LP tokens by adding BLZD and BNB liquidity"
+        "text": "Get OLIVE-BNB LP tokens by adding OLIVE and BNB liquidity"
       }
     },
     {
@@ -831,7 +831,7 @@
     {
       "data": {
         "stringId": 602,
-        "text": "While the sale is live, commit your BLZD-LP tokens to buy the IFO tokens"
+        "text": "While the sale is live, commit your OLIVE-LP tokens to buy the IFO tokens"
       }
     },
     {
@@ -867,7 +867,7 @@
     {
       "data": {
         "stringId": 614,
-        "text": "Trade in for BLZD, or keep for your collection!"
+        "text": "Trade in for OLIVE, or keep for your collection!"
       }
     },
     {
@@ -909,7 +909,7 @@
     {
       "data": {
         "stringId": 628,
-        "text": "When you trade in this NFT to receive BLZD, you will lose access to it forever!"
+        "text": "When you trade in this NFT to receive OLIVE, you will lose access to it forever!"
       }
     },
     {
@@ -939,7 +939,7 @@
     {
       "data": {
         "stringId": 638,
-        "text": "Winners can trade in their NFTs for a BLZD value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
+        "text": "Winners can trade in their NFTs for a OLIVE value until the expiry date written below. If you don't trade in your NFT by then, don\u2019t worry: you\u2019ll still keep it in your wallet!"
       }
     },
     {
@@ -981,7 +981,7 @@
     {
       "data": {
         "stringId": 654,
-        "text": "Trade in for BLZD"
+        "text": "Trade in for OLIVE"
       }
     },
     {
@@ -1143,13 +1143,13 @@
     {
       "data": {
         "stringId": 708,
-        "text": "The BLZD Lottery"
+        "text": "The OLIVE Lottery"
       }
     },
     {
       "data": {
         "stringId": 710,
-        "text": "Buy tickets with BLZD"
+        "text": "Buy tickets with OLIVE"
       }
     },
     {
@@ -1203,7 +1203,7 @@
     {
       "data": {
         "stringId": 10000,
-        "text": "Deposit Fee will be used to buyback BLZD"
+        "text": "Deposit Fee will be used to buyback OLIVE"
       }
     },
     {
