index page updates

--- a/public/i18n/zh-CN.json
+++ b/public/i18n/zh-CN.json
@@ -765,7 +765,7 @@
     {
       "data": {
         "stringId": 576,
-        "text": "BLIZZARD.MONEY"
+        "text": "Olive.Cash"
       }
     },
     {
@@ -777,7 +777,7 @@
     {
       "data": {
         "stringId": 580,
-        "text": "\u8d28\u62bc BLZD \u4ee5\u8d5a\u53d6\u65b0\u4ee3\u5e01\u3002"
+        "text": "\u8d28\u62bc OLIVE \u4ee5\u8d5a\u53d6\u65b0\u4ee3\u5e01\u3002"
       }
     },
     {
