--- a/public/i18n/zh-TW.json
+++ b/public/i18n/zh-TW.json
@@ -591,7 +591,7 @@
     {
       "data": {
         "stringId": 508,
-        "text": "\u5c08\u6848\u53d6\u5f97 BNB \u5f8c\uff0c\u800c BLIZZARD.MONEY \u92b7\u6bc0 BLZD\u3002"
+        "text": "\u5c08\u6848\u53d6\u5f97 BNB \u5f8c\uff0c\u800c Olive.Cash \u92b7\u6bc0 OLIVE\u3002"
       }
     },
     {
@@ -765,7 +765,7 @@
     {
       "data": {
         "stringId": 576,
-        "text": "BLIZZARD.MONEY"
+        "text": "Olive.Cash"
       }
     },
     {
