Add price link, Move to olive-uikit

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -759,7 +759,7 @@
     {
       "data": {
         "stringId": 578,
-        "text": "The best DEFI app on Binance Smart Chain."
+        "text": "The best DEFI app on Avalanche Chain."
       }
     },
     {
